Channel bar fixes
--Styles
--Scrollbar fits channels
--Windows 11 button formatting

--- a/Windows11.theme.css
+++ b/Windows11.theme.css
@@ -74,7 +74,7 @@
 	/* Other */
 	--User-List-Width: 250px;					/* 200spx, Discord default = 240px */
 	--User-Popout-Width: 300px;					/* 236px, Discord default = 300px */
-	--Channel-List-Width: 251px;				/* 196px, Discord default = 240px */
+	--Channel-List-Width: 312px;				/* 196px, Discord default = 240px */
 	--side-popout: 500px;
 	
 	--Channel-Invite-Edit-Button: none;			/* flex = ON, none = OFF */
@@ -176,6 +176,13 @@
 	--background: #F9F9F9F1 !important;
 	--text: #000000 !important;
 }
+
+
+.content-98HsJk .sidebar-2K8pFh .scrollerBase-289Jih {
+	margin-top: 95px !important;
+}
+
+
 
 /* Video background - move */
 	/* Selected */
@@ -422,8 +429,11 @@ transform: translatey( -100% );
 			}
 
 		/* Channel list height */
-		.content-3YMskv[style="height: 1060px;"], .content-3YMskv[style="height: 1100px;"] {
-			height: 100% !important;
+		div[style="height: 84px;"] {
+			display: none;
+		}
+		.content-3YMskv {
+			height: auto !important;
 		}
 
 		/* Server boost bar */
@@ -914,6 +924,14 @@ transform: translatey( -100% );
 					padding: 0px;
 					margin-bottom: -23px;
 				}
+
+				/* DMs/Channels */
+				.searchBar-3dMhjb,
+				.searchBar-6Kv8R2 .searchBarComponent-32dTOx {
+					width: 278px !important;
+					margin: 0px 16px !important;
+				}
+
 				/* Text */
 				.fontSize16Padding-3Wk7zP /* Message input */ {
 					padding-top: 2px !important;
@@ -922,6 +940,7 @@ transform: translatey( -100% );
 				.search-1iTphC .searchBox-2_mAlO .searchBoxInput-K6mkng { /* Discovery home page */
 					padding: 0px !important;
 				}
+
 				/* Icon size */
 				.iconContainer-2wXvy1 > svg,
 				.iconContainer-O4O2CN > svg {
@@ -1880,14 +1899,8 @@ transform: translatey( -100% );
 }
 
 /* Categories Collapse/Open Channels Button & Text */
-.sidebar-2K8pFh .wrapper-PY0fhH .icon-2yIBmh {
-	margin-left: 218px;
-	width: 21px;
-	height: 21px;
-	top: 1px;
-}
 .sidebar-2K8pFh .wrapper-PY0fhH {
-	padding-left: 45px;
+	padding-left: 42px;
 	padding-right: 8px;
 	margin-bottom: 1px;
 }
@@ -2041,6 +2054,7 @@ transform: translatey( -100% );
 
 	/* Channel icon + Text - move */
 	.iconContainer-1BBaeJ {
+		margin-left: 32px;
 		margin-right: 14px;
 	}
 	.mainContent-u_9PKf {
@@ -2254,21 +2268,22 @@ transform: translatey( -100% );
 
 /* Selected channel side highlight - move */
 .containerDefault--pIXnN .selected-3LIHYU {
-	height: 22px;
 	width: 4px;
+	height: 22px;
 	top: 10px;
 	background-color: var(--win-accent-fg);
-	border-radius: 15px;
+	border-radius: 8px;
 	z-index: 1;
 }
 
 /*Unread channel side highlight - move */ 
 .sidebar-2K8pFh .wrapper-2jXpOf .unread-2lAfLh {
-	height: 22px;
 	width: 4px;
+	height: 22px;
 	top: 10px;
+	left: 28px;
 	background-color: var(--unread);
-	border-radius: 15px;
+	border-radius: 8px;
 	z-index: 1;
 }
 
@@ -2357,20 +2372,30 @@ transform: translatey( -100% );
 	.privateChannels-1nO12o .channel-2QD9_O.selected-aXhQR6 .layout-2DM8Md {
 		border-radius: 5px !important;
 	}
+		/* Channels images */
+		.bannerImg-2NHyzX {
+			width: 100%;
+			margin-left: auto;
+			margin-right: auto;
+			display: block;
+		}
+
 		/* Channel item spacing */
-			/* Servers */
-				/* Catagory */
-				.sidebar-2K8pFh .wrapper-PY0fhH {
-					margin: 2px 4px;
+			/* Catagory */
+			.sidebar-2K8pFh .wrapper-PY0fhH {
+				margin: 2px 4px;
+			}
+				/* Padding */
+				.sidebar-2K8pFh .containerDefault-3tr_sE {
+					padding-top: 0px;
 				}
-					/* Padding */
-					.sidebar-2K8pFh .containerDefault-3tr_sE {
-						padding-top: 0px;
+					/* Icon */
+					.sidebar-2K8pFh .wrapper-PY0fhH .icon-2yIBmh {
+						margin-left: 91%;
+						width: 21px;
+						height: 21px;
+						top: 1px;
 					}
-						/* Icon */
-						.sidebar-2K8pFh .wrapper-PY0fhH .icon-2yIBmh {
-							margin-left: 210px;
-						}
 
 			/* Channels */
 			.containerDefault--pIXnN {
@@ -2879,8 +2904,6 @@ transform: translatey( -100% );
 	.container-1taM1r .header-2V-4Sw,
 	.container-1taM1r .header-2V-4Sw:hover {
 		height: 40px;
-		padding: 0px 4px 0px 7px;
-		margin-right: 10px;
 		text-align: center;
 		z-index: 2;
 	}
@@ -5860,8 +5883,9 @@ transform: translatey( -100% );
 
 /* Server Name/Header Popout */
 .styleFixed-sX-yHV[id="guild-header-popout"] {
-	width: calc(var(--Channel-List-Width) - 10px);
+	width: calc(var(--Channel-List-Width) - 24px);
 	margin-top: -8px;
+	margin-left: 7px;
 	border-radius: 0px 0px 10px 10px;
 	border: 1px solid var(--win-border);
 	box-shadow: none;
@@ -9270,6 +9294,7 @@ body {
 	Fix Add server + discovery button not correct colors
 	Fix scrollbars not synced in create/join server
 	Fix server bar and windows title bar top left rounded corner
+	Fix no image blank space on channel banner
 	Add up and down arrows on scrollbars
 	Fix discord home icon not applying
 	move settings icon to server list area
